# OS2021_Fall

./: .gitignore
Memory/: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE  mma_benchmark.cc  mma_benchmark_extra.cc  mma_test.cc  result.md
Memory/lib/: BUILD  array_list.cc  array_list.h  evict_mgr.h  memory_manager.cc  memory_manager.h  utils.cc  utils.h
RPC/: CMakeLists.txt  WORKSPACE  mma_test.cc
RPC/demo/: CMakeLists.txt  WORKSPACE  greeter_client.cc  greeter_server.cc
RPC/lib/: BUILD  array_list.cc  array_list.h  const.h  evict_mgr.h  memory_manager.cc  memory_manager.h  mma_client.cc  mma_client.h  mma_server.cc  mma_server.h
RPC/proto/: mma.proto
Thread-1/: .bazelrc  BUILD  CMakeLists.txt  DESIGNDOC.md  WORKSPACE  benchmark.cc  format.cc  q0.cc  q1.cc  q2.cc  q3.cc  q4.cc  q5.cc
Thread-1/lib/: BUILD  embedding.cc  embedding.h  embedding_test.cc  instruction.cc  instruction.h  model.cc  model.h  model_test.cc  operation.cc  operation.h  operation_test.cc  util_test.cc  utils.cc  utils.h
Thread-1/scripts/: fmt.BUILD  glog.BUILD
Thread-1/test/: operation_test.cc
Thread-2/boat/: CMakeLists.txt  boat.cc  boat.h  boatGrader.cc  boatGrader.h  main.cc
Thread-2/deadlock/: BUILD  CMakeLists.txt  WORKSPACE  main.cc
Thread-2/deadlock/data/: example.in
Thread-2/deadlock/lib/: BUILD  resource_manager.cc  resource_manager.h  thread_manager.cc  thread_manager.h  utils.cc  utils.h  workload.cc  workload.h
